--- a/index.html
+++ b/index.html
@@ -9,11 +9,27 @@
     :root { --maxw: 1100px; --pad: 16px; }
     body { margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; line-height:1.5; color:#111; }
     header { position:relative; }
-    .hero { position:relative; width:100%; overflow:hidden; }
-    .hero::before { content:""; display:block; padding-top:56.25%; } /* 16:9 */
-    .hero iframe { position:absolute; top:0; left:0; width:100%; height:100%; border:0; }
-    .overlay { position:absolute; inset:0; display:flex; align-items:center; justify-content:center;
-      background: linear-gradient(0deg, rgba(0,0,0,.45), rgba(0,0,0,.45)); text-align:center; color:#fff; padding: 24px; }
+    .hero {
+      position: relative;
+      width: 100%;
+      height: min(70vh, 56.25vw); /* responsive, never too tall */
+      overflow: hidden;
+    }
+
+    .hero iframe {
+      position: absolute; inset: 0; width: 100%; height: 100%;
+      border: 0;
+      z-index: 1;
+      pointer-events: none;       /* prevents the iframe from stealing scroll/clicks in the hero */
+    }
+    .overlay {
+      position: absolute; inset: 0;
+      display: flex; align-items: center; justify-content: center;
+      text-align: center; color: #fff; padding: 24px;
+      z-index: 2;                               /* ensure overlay is above iframe */
+      background: linear-gradient(0deg, rgba(0,0,0,.60), rgba(0,0,0,.60)); /* darker for readability */
+      backdrop-filter: blur(2px);               /* optional: softens the busy UI behind */
+    }
     .overlay h1 { margin:0 0 8px 0; font-size: clamp(24px, 3.5vw, 42px); }
     .overlay p { margin:0; font-size: clamp(14px, 2.2vw, 18px); opacity:.95; }
     main { max-width: var(--maxw); margin: 32px auto; padding: 0 var(--pad); }
