--- a/index.html
+++ b/index.html
@@ -58,13 +58,18 @@
   <div class="hero">
     <!-- Replace src with your QC embed URL. You can append ?theme=darkly -->
     <iframe src="https://www.quantconnect.cloud/live/24357439/a16eddd2a3681b803e2c68669e7a2ce2b045b5ffe3290168b1995737ad2f1c5d/?theme=darkly"></iframe>
-    <div class="overlay">
-      <div>
-        <h1>From Idea to Execution: My End‑to‑End Quant Trading Project</h1>
-        <p>I learned the full QuantConnect workflow and built a custom social sentiment signal to improve timing.</p>
-        <div class="badge">Status: Live (paper) on QuantConnect</div>
-      </div>
+  <div class="overlay">
+    <div>
+      <h1>From Idea to Execution: My End-to-End Quant Trading Project</h1>
+      <p>I learned the full QuantConnect workflow and built a custom social sentiment signal to improve timing.</p>
+      <div class="badge">Status: Live (paper) on QuantConnect</div>
+    
+      <!-- Live QC button -->
+      <p style="margin-top:12px">
+        <a class="btn" href="YOUR_QC_LIVE_URL" target="_blank" rel="noopener">Open Live Results</a>
+      </p>
     </div>
+  </div>
   </div>
 </header>
 
