--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     
       <!-- Live QC button -->
       <p style="margin-top:12px">
-        <a class="btn" href="YOUR_QC_LIVE_URL" target="_blank" rel="noopener">Open Live Results</a>
+        <a class="btn" href="https://www.quantconnect.cloud/live/24357439/a16eddd2a3681b803e2c68669e7a2ce2b045b5ffe3290168b1995737ad2f1c5d/?theme=darkly" target="_blank" rel="noopener">Open Live Results</a>
       </p>
     </div>
   </div>
@@ -86,12 +86,12 @@
       <figure>
         <figcaption><strong>Step 1 — Control</strong> (Buy &amp; Hold / Mean Reversion)</figcaption>
         <img src="assets/baseline_curve.png" alt="Baseline control equity curve">
-        <div class="links"><a class="btn" href="#" target="_blank" rel="noopener">View full backtest</a></div>
+        <div class="links"><a class="btn" href="https://www.quantconnect.cloud/backtest/59da0c84c7d651152755c6117e185830/?theme=darkly" target="_blank" rel="noopener">View full backtest</a></div>
       </figure>
       <figure>
         <figcaption><strong>Step 2 — Technical Signals</strong> (EMA/RSI/Bollinger)</figcaption>
         <img src="assets/tech_only_curve.png" alt="Technical-only equity curve">
-        <div class="links"><a class="btn" href="#" target="_blank" rel="noopener">View full backtest</a></div>
+        <div class="links"><a class="btn" href="https://www.quantconnect.cloud/backtest/78ffb3e3ce40b1bbfc3b7cfcb3e99491/?theme=darkly" target="_blank" rel="noopener">View full backtest</a></div>
       </figure>
     </div>
     <figure style="margin-top:16px;">
