--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
     <h2>My QuantConnect Journey</h2>
     <div class="grid grid-2">
       <figure>
-        <figcaption><strong>Step 1 — Control</strong> (Buy &amp; Hold / Mean Reversion)</figcaption>
-        <img src="assets/baseline_curve.png" alt="Baseline control equity curve">
+        <figcaption><strong>Step 1 — Control</strong> (Buy &amp; Hold)</figcaption>
+        <img src="assets/NVDA_buy_n_hold_curve.png" alt="NVDA Buy & Hold equity curve">
         <div class="links"><a class="btn" href="https://www.quantconnect.cloud/backtest/59da0c84c7d651152755c6117e185830/?theme=darkly" target="_blank" rel="noopener">View full backtest</a></div>
       </figure>
       <figure>
-        <figcaption><strong>Step 2 — Technical Signals</strong> (EMA/RSI/Bollinger)</figcaption>
-        <img src="assets/tech_only_curve.png" alt="Technical-only equity curve">
+        <figcaption><strong>Step 2 — Technical Signals</strong> (Mean Reversion)</figcaption>
+        <img src="assets/NVDA_mean_reversion_curve.png" alt="Technical-only equity curve">
         <div class="links"><a class="btn" href="https://www.quantconnect.cloud/backtest/78ffb3e3ce40b1bbfc3b7cfcb3e99491/?theme=darkly" target="_blank" rel="noopener">View full backtest</a></div>
       </figure>
     </div>
     <figure style="margin-top:16px;">
       <figcaption><strong>Step 3 — Optimization</strong> (parameter sweeps to improve Sharpe / reduce drawdown)</figcaption>
-      <img src="assets/opt_table.png" alt="Optimization results table">
+      <img src="assets/NVDA_mean_reversion_optimization.png" alt="Optimization results table">
     </figure>
   </section>
 
