--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     .btn:hover { filter:brightness(1.1); }
 
     /* Compact live preview card */
-    .live-card { max-width: var(--maxw); margin: 18px auto 0; padding: 0 var(--pad); }
+/*     .live-card { max-width: var(--maxw); margin: 18px auto 0; padding: 0 var(--pad); } */
+    .live-card { max-width: 1400px; margin: 18px auto 0; padding: 0 var(--pad); }
     .live-card-inner { background:#0b0b0b; border:1px solid #222; border-radius:14px; box-shadow:0 6px 24px rgba(0,0,0,.25); overflow:hidden; }
     .live-topbar { display:flex; align-items:center; justify-content:space-between; padding:10px 12px; color:#ddd; font-size:14px; background:#121212; border-bottom:1px solid #222; }
     .live-actions a { margin-left:8px; }
