--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     <h1>From Idea to Execution: My End‑to‑End Quant Trading Project</h1>
     <p>I learned the full QuantConnect workflow and built a custom social sentiment signal to improve timing.</p>
     <div class="badge">Status: Live (paper) on QuantConnect</div>
-    <p style="margin-top:14px">
+<!--     <p style="margin-top:14px">
       <a class="btn" href="https://www.quantconnect.cloud/live/24357439/a16eddd2a3681b803e2c68669e7a2ce2b045b5ffe3290168b1995737ad2f1c5d/?theme=darkly" target="_blank" rel="noopener">Open Live Results</a>
-    </p>
+    </p> -->
   </div>
 
   <!-- compact live preview just below the hero -->
